# calculadoraempresaouindividual

./: .gitignore  1  AUDITORIA-CONTABILISTICA-2026-05-28.md  AUDITORIA-FISCAL-2026-06-09.md  CLAUDE.md  README.md  WINDOWS_APP.md  abrir-simuladores.ps1  firestore.rules  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite-plugin-version.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml  static.yml  tauri-build.yml
docs/: AUDITORIA-DIAGNOSTICO.md  AUDITORIA-FISCAL-PENDENTE.md  AUDITORIA-FISCAL.md  AUDITORIA-IMOVEIS.md  AUDITORIA-IMT.md  AUDITORIA-IRS.md  AUDITORIA-PERFIL-HONORARIOS-EXPORTAR.md  AUDITORIA-PREVISA.md  AUDITORIA-RESUMO.md  AUDITORIA-SALARIO.md  AUDITORIA-SS-INDEPENDENTE.md  AUDITORIA-TICKETS.md  AUDITORIA-VIATURAS.md
functions/: _kb.ts  _models.ts  _systemPrompt.ts
functions/api/: chat.ts
public/: CNAME  previsa-template.xls  previsa-template.xlsx
scripts/: verify.sh
src/: AnimatedPage.tsx  App.tsx  ClientHub.tsx  ClientProfile.tsx  DiagnosticoAutonomia.tsx  EmpresasList.tsx  EnquadramentoCompleto.tsx  ErrorBoundary.tsx  ExportPackageModal.tsx  ExportarRelatorio.tsx  FichaDiagnostico.tsx  FloatingFlowToggle.tsx  FlowWizard.tsx  IMTSimulator.tsx  IRSSimulator.tsx  ImoveisEmpresa.tsx  LandingPage.tsx  Layouts.tsx  LegalInfo.tsx  LoginPage.tsx  MinutaContrato.tsx  ModeSelector.tsx  OfficeSettingsView.tsx  PDFPreviewEditor.tsx  PreviSaSimulator.tsx  Proposta.tsx  SalarioLiquidoSimulator.tsx  SelfEmployedSSSimulator.tsx  SimIntro.tsx  SimulacaoSave.tsx  SimulacoesHistory.tsx  TaxSimulator.tsx  ThemeContext.tsx  TicketSimulator.tsx  Tip.tsx  UpdatesList.tsx  VehicleSimulator.tsx  fichaState.ts  index.css  main.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: imt.ts  (+39 more)
(+6 files in other folders)
