[package]
name = "recofatima-simuladores"
version = "1.0.0"
description = "Recofatima Simuladores Desktop Wrapper"
authors = ["Recofatima"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.bundle]
identifier = "com.recofatima.simuladores"
icon = ["icons/icon.png"]

[package.metadata.tauri.bundle.windows]
wix = []
